Revision history for Perl extension CGI::Application::Plugin::Authentication.

0.17_4  Mon Feb 13 22:17 GMT 2010
    Fixed dependency on Test::More - must be at least version 0.90.
    Added more tests. Fixed handling of custom filters.

0.17_3  Mon Feb 13 22:17 GMT 2010
    Bug Fixes
    Adding tests around the HTML generated by the login_box function and
    verifying that it is taint free.
    Upped requiredment on CGI to 3.11 as that seems to cause unusual behaviour in returning
    self referring urls.
    Further upped requirement on CGI to 3.16 as 3.15 has a buggy interpretation of redirection headers.
    Fixed regular expressions in destination test to respect HTTP header CRLF conventions.

0.17  Thu Jan 21 19:16 GMT 2010
    Bug Fixes
    rt53533 - During initialization deferred checking the users credentials to the last possible moment.
    This ensures that sessions are not created unless actually required. 
    Also attempted to document which functions add session/cookie state.

    Build Fixes
    rt35030 - Upped the requirement on Apache::Htpasswd to 1.8 as this simplifies our dependency management.

0.16  Mon Jan 18 22:18 GMT 2010 
    Release dedicated to improving CPAN readiness - see RT:50670.
    Fixed spelling mistakes and added a test script that uses Test::Spelling.
    Fixed dependency on Test::Exception and added a test script that uses Test::Prereq::Build.
    Added test scripts to validate the MANIFEST file and Changes file.
    Removed files that are generated during './Build dist' from repository.
    
0.15  Tue Jan 12 15:42 GMT 2010
    Redist to fix tar format issues RT:45155 & 23705

0.14  Sun Oct 18 02:48:10 EST 2009
    Bug Fixes
    - Make sure the 'action' attribute of the login_box includes the
      path_info in the URL (resolves RT:38049 patch by Alex Becker)
    
    New Features
    - Add options for LIMIT and ORDER_BY to DBI driver (requested by tbone)