@@ -2,7 +2,8 @@ Revision history for Perl extension CGI::Application::Plugin::Authentication.
 
 0.17_4  Mon Feb 13 22:17 GMT 2010
     Fixed dependency on Test::More - must be at least version 0.90.
-    Added more tests. Fixed handling of custom filters.
+    Added more tests. Fixed handling of custom filters - now they must have a
+    $param and a $value.
 
 0.17_3  Mon Feb 13 22:17 GMT 2010
     Bug Fixes
